Search  banner admin dynamic-home

--- a/views/admin/add_products.ejs
+++ b/views/admin/add_products.ejs
@@ -41,7 +41,7 @@
               <label for="exampleInputPassword4" class="w-25">Offer Percent</label>
               <p id="err" class="text-danger d-flex justify-content-end w-75"></p>
             </div>
-            <input type="number" autocomplete="off" class="form-control" id="percentVal" placeholder="Percent" onfocusout="calcOffer(this)" name="percent" required>
+            <input type="number" autocomplete="off" class="form-control" id="percentVal" placeholder="Percent" onkeyup="calcOffer(this)" name="percent" required>
           </div>
 
           <div class="form-group col-md-5">
