--- a/views/admin/category-banner-list.ejs
+++ b/views/admin/category-banner-list.ejs
@@ -4,7 +4,7 @@
       <h4 class="card-title">Products </h4>
       <p class="card-description">
       </p>
-      <% if(data.length <=3 ) {%>
+      <% if(data.length >=3 ) {%>
         <p class="text-danger">Maximum no of Category banner is 3 please Delete existing banner or edit the Existing banner</p>
       <% }else{ %>
         <a type="button" href="/admin/add-category-banner" class="btn btn-outline-info btn-sm btn-icon-text ti-upload btn-icon-prepend">
