--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -13,7 +13,7 @@
             <tr>
               <th># </th>
               <th>Image</th>
-              <th>Name</th>
+              <th>Image</th>
               <th>Stock</th>
               <th>Offer Price</th>
               <th>Market Price </th>
