--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -65,6 +65,7 @@
         position: 'bottom',
         showConfirmButton: false,
         timer: 3000,
+        background:"#f5f6f6",
         timerProgressBar: true,
         didOpen: (toast) => {
           toast.addEventListener('mouseenter', Swal.stopTimer)
