--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -45,7 +45,6 @@
                   <td class="quantity-col">
                     <div class="cart-product-quantity" style="display:flex;">
 
-
                       <button style="min-width:26;" class="btn btn-decrement btn-spinner" <%if(cart.quantity<2){%>disabled<%} %> id="decrement" onclick="changeQuantity('<%-cart._id%>','<%-cart.product?._id%>',-1,this.parentElement.querySelector('input'),'<%-cart.product?.offerPrice %>','<%-cart?.product?.quantity%>')" type="button">
                         <i class="icon-minus"></i>
                       </button>
@@ -78,17 +77,9 @@
             <% }else{ %>
             <div class="cart-bottom">
               <div class="cart-discount">
-                <form action="#">
-                  <div class="input-group">
-                    <input type="text" class="form-control" required placeholder="coupon code">
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-primary-2" type="submit"><i class="icon-long-arrow-right"></i></button>
-                    </div><!-- .End .input-group-append -->
-                  </div><!-- End .input-group -->
-                </form>
+                <a class="btn btn-outline-dark-2 p-3" onclick="location.reload()"><span>UPDATE CART</span><i class="icon-refresh"></i></a>
               </div><!-- End .cart-discount -->
 
-              <a href="#" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i class="icon-refresh"></i></a>
             </div><!-- End .cart-bottom -->
           </div><!-- End .col-lg-9 -->
           <aside class="col-lg-3">
