--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -321,6 +321,7 @@
             let orderDate = new Date(date)
 
             let day = orderDate.getDate();
+            
             let month = orderDate.getMonth();
             month+=1
             let year = orderDate.getFullYear();
@@ -328,7 +329,6 @@
             return `${isNaN(day)?00:day}-${isNaN(month)?00:month}-${isNaN(year)?0000:year}`
 
           }
-
 
           var data = {
             "images": {
@@ -338,7 +338,7 @@
             // Your own data
             "sender": {
               "company": "RIG-X-",
-              "address": "MULLEZHATH INCHIPARAMBIL HOUSE THIRIKKAKARA",
+              "address": "RIG-X- ECOMMERCE THIRIKKAKARA,KERALA",
               "zip": "682021",
               "city": "Cochin",
               "country": "INDIA"
